<resources>
    <string name="app_name">GrowMe</string>
    <string name="team_name">noplanb</string>

    <!-- 바텀 내비게이션 바 -->
    <string name="navi_home">홈</string>
    <string name="navi_calendar">캘린더</string>
    <string name="navi_item">아이템</string>
    <string name="navi_mypage">마이</string>

    <!-- 스플래시 화면 -->
    <string name="splash_desc">나 키우기 로고</string>

    <!-- 닉네임 설정 화면 -->
    <string name="text_nickname_hint">닉네임을 입력해주세요</string>

    <!--  탭 레이아웃 탭 이름  -->
    <string name="hair">머리</string>
    <string name="face">얼굴</string>
    <string name="clothes">옷</string>
    <string name="background">배경</string>

    <!-- Home 화면 -->
    <string name="text_today_quest">오늘의 퀘스트</string>

    <!-- 마이페이지 -->
    <string name="text_total_exp">총 경험치</string>
    <string name="text_total_quest">총 퀘스트 개수</string>
    <string name="text_total_day">성장일</string>

    <!-- 설정 페이지 -->
    <string name="text_setting_title">설정</string>
    <string name="text_character_email">연결된 계정</string>
    <string name="text_kakao">카카오</string>
    <string name="text_version_info">버전 정보</string>
    <string name="text_version">v 1.0.0</string>
    <string name="text_policy">개인정보 정책</string>
    <string name="text_terms_of_use">이용약관</string>
    <string name="text_sign_out">로그아웃</string>
    <string name="text_withdraw">서비스 탈퇴</string>

    <!-- 퀘스트 추가 다이얼로그 -->
    <string name="hint_quest_description">퀘스트 내용</string>

</resources>