<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_ivory">

    <Toolbar
        android:id="@+id/tb_setting"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_left_white"
        app:layout_constraintBottom_toBottomOf="@id/tb_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tb_setting"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_setting_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/ib_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ib_back" />

    <ImageView
        android:id="@+id/iv_my_account"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle_black"
        app:layout_constraintTop_toBottomOf="@id/tb_setting"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintStart_toStartOf="@id/iv_my_account"
        app:layout_constraintTop_toTopOf="@id/iv_my_account"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_my_account_text"
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/text_character_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_circle"
        app:layout_constraintStart_toEndOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_circle" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_my_account_text"
        app:layout_constraintTop_toBottomOf="@id/tv_my_account_text"
        tools:text="noplanb@gmail.com" />

    <TextView
        android:id="@+id/tv_provider"
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/text_kakao"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_my_account"
        app:layout_constraintEnd_toEndOf="@id/iv_my_account"
        app:layout_constraintTop_toTopOf="@id/iv_my_account"
        app:layout_constraintVertical_bias="0.446" />

    <ImageView
        android:id="@+id/iv_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_rectangle_black"
        app:layout_constraintTop_toBottomOf="@id/iv_my_account"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/iv_version"
        app:layout_constraintStart_toStartOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_version"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_version_info"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_version"
        app:layout_constraintStart_toStartOf="@id/tv_my_account_text"
        app:layout_constraintTop_toTopOf="@+id/iv_version" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_version"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_version"
        app:layout_constraintEnd_toEndOf="@id/tv_provider"
        app:layout_constraintTop_toTopOf="@id/iv_version" />

    <ImageView
        android:id="@+id/iv_terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_rectangle_black"
        app:layout_constraintTop_toBottomOf="@id/iv_version"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/iv_terms_of_use"
        app:layout_constraintStart_toStartOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_terms_of_use"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_terms_of_use"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_terms_of_use"
        app:layout_constraintStart_toStartOf="@id/tv_my_account_text"
        app:layout_constraintTop_toTopOf="@+id/iv_terms_of_use" />

    <ImageView
        android:id="@+id/btn_terms_of_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="@id/iv_terms_of_use"
        app:layout_constraintEnd_toEndOf="@id/tv_provider"
        app:layout_constraintTop_toTopOf="@id/iv_terms_of_use"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_policy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_rectangle_black"
        app:layout_constraintTop_toBottomOf="@id/iv_terms_of_use"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/iv_policy"
        app:layout_constraintStart_toStartOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_policy"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_policy"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_policy"
        app:layout_constraintStart_toStartOf="@id/tv_my_account_text"
        app:layout_constraintTop_toTopOf="@+id/iv_policy" />

    <ImageView
        android:id="@+id/btn_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="@id/iv_policy"
        app:layout_constraintEnd_toEndOf="@id/tv_provider"
        app:layout_constraintTop_toTopOf="@id/iv_policy"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_signout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_policy"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_out"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_signout"
        app:layout_constraintStart_toStartOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_signout" />

    <ImageView
        android:id="@+id/iv_withdrawal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_signout"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/neodgm_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_withdraw"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_withdrawal"
        app:layout_constraintStart_toStartOf="@id/iv_circle"
        app:layout_constraintTop_toTopOf="@id/iv_withdrawal" />

</androidx.constraintlayout.widget.ConstraintLayout>